python/testData/inspections/PyUnresolvedReferencesInspection/FromPackageImportBuiltin/a.py
from importSource import <error descr="Cannot find reference 'len' in '__init__.py'">len</error>

len()
